[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/BlockTypeB.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/BlockTypeGoalA.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/BlockTypeA.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/BlockTypeD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/BlockTypeF.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/BlockTypeE.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Level1.gd" type="Script" id=7]

[node name="Level1" type="Spatial"]
script = ExtResource( 7 )

[node name="Navigation" type="Navigation" parent="." groups=["navigations"]]
cell_size = 0.1

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]

[node name="Blocks" type="Spatial" parent="Navigation/NavigationMeshInstance"]

[node name="BlockTypeA" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5 )

[node name="BlockTypeA5" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="BlockTypeA2" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )

[node name="BlockTypeA3" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5 )

[node name="BlockTypeGoalA" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="BlockTypeB" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 1 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 10, 0, 5 )

[node name="BlockTypeB2" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 1 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 5, 0, -5 )

[node name="BlockTypeD" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )

[node name="BlockTypeD2" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10, 0, 0 )

[node name="BlockTypeD3" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10, 0, -5 )

[node name="BlockTypeE" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 6 )]

[node name="BlockTypeF" parent="Navigation/NavigationMeshInstance/Blocks" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
